codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

后台终端

  • rg "foo" src --glob '**/*. [...]
