codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_multiline_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

后台终端

  • echo hello [...]
  • rg "foo" src
