codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已运行 echo
  │ this_is_a_very_long
  │ _single_token_that_
  │ … 还有 2 行
  └ error: first line on
    stderr
    error: second line on
    stderr
