codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已运行 a_very_long_tok
  │ en_without_spac
  │ es_to_force_wra
  │ … 还有 1 行
  └ (no output)
