codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已运行 seq 1 10 1>&2 && false
  └ 1
    2
    … 还有 6 行
    9
    10
